Prevent shifting due to numbers changing

--- a/SignalSonic/Shared (Extension)/Resources/popup.css
+++ b/SignalSonic/Shared (Extension)/Resources/popup.css
@@ -10,6 +10,10 @@ body {
     text-align: center;
 }
 
+span {
+    font-feature-settings: "tnum"; /* Enables tabular numbers */
+}
+
 @media (prefers-color-scheme: dark) {
     /* Dark Mode styles go here. */
 }
